hphp/hack/test/analyze/list_logger/logs/generic_basic.php.exp
@list_logger:{"bucket":"Generic","type_string":"T","has_complex_lvalue":false,"pos":{"filename":"generic_basic.php","line":4,"char_start":18,"char_end":19},"lhs_code":"list($a, $b)","total_lvalue_count":2,"is_generated":false}
ERROR: File "generic_basic.php", line 4, characters 3-19:
Invalid assignment (Typing[4110])
  File "generic_basic.php", line 4, characters 3-14:
  Expected `list(nothing, nothing)` resulting from a list destructuring assignment or a splat
  File "generic_basic.php", line 3, characters 26-26:
  But got `T`
ERROR: File "generic_basic.php", line 4, characters 3-19:
Invalid assignment (Typing[4357])
  File "generic_basic.php", line 4, characters 3-14:
  This expression cannot be destructured with a `list(...)` expression
  File "generic_basic.php", line 3, characters 26-26:
  This is `mixed`
