hphp/hack/test/analyze/list_logger/logs/generic_basic.php
<?hh

function test_generic<T>(T $x): void {
  list($a, $b) = $x;
}
